Autogen routes and swagger docs
